Fixed that gray blurry color.
It turns out that you have to use background-color, and not color, to get a color to the background. I am such a dummy.

--- a/BaizaOPLists/styles/global-style.css
+++ b/BaizaOPLists/styles/global-style.css
@@ -1,5 +1,5 @@
 html{
-color: gainsboro;
+background-color: lightgray;
 }
 .navbar{
 text-align: center;
